--- a/HTML LIst.html
+++ b/HTML LIst.html
@@ -5,9 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Html List</title>
+     <style>
+         p{
+             color: chocolate;
+         }
+         th{
+             background-color: rgb(231, 10, 10);
+         }
+         table,tr{
+             width: 100%;
+             height: 30px;
+         }
+         tr td:hover{
+             color: rgb(83, 43, 226);
+         }
+     </style>
 </head>
 <body>
-    <table border=" 1px solid black">
+    <table border=" 1px solid black" width="370px" >
         <tr>
             <th>HTML Unordered Lists start</th>
             <th>HTML Ordered List Start</th>
